--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@ body{
     color: #eee;
     font-family:'Times New Roman', Times, serif;
     font-size: 12px;
+    margin-right: 360px !important;
 }
 a{
     text-decoration: none;
@@ -31,17 +32,36 @@ header a{
     object-fit: cover;
   }
 
-  /* Logo.css */
-
-.logo-container {
-    margin-top: 30px; /* Espaciado a la derecha para separar del resto del contenido en el header */
-    margin-right: 10px; /* Espaciado a la derecha para separar del resto del contenido en el header */
+  /* logo */
+  .logo-container {
+    position: absolute;
+    top: 9rem;
+    left: 20px;
+    z-index: 101;
   }
   
   .logo-image {
-    width: 60px; /* Ajusta el ancho según tus preferencias */
-    height: 60px; /* Mantiene la proporción original de la imagen */
+    width: 60px;
+    height: 60px;
   }
+
+  /* redes sociales */
+  .social-icons {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    display: flex;
+    align-items: center;
+    z-index: 101;
+  }
+  
+  .social-icons a {
+    color: #eee;
+    font-size: 24px;
+    margin-left: 15px;
+    text-decoration: none;
+  }
+
 
 /* carousel */
 .carousel{
@@ -123,31 +143,39 @@ header a{
     display: flex;
     gap: 20px;
 }
-.thumbnail .item{
+
+.thumbnail .item {
     width: 150px;
     height: 220px;
     flex-shrink: 0;
     position: relative;
+    overflow: hidden;
+    cursor: pointer;
 }
-.thumbnail .item img{
+
+.thumbnail .item img {
     width: 100%;
     height: 100%;
     object-fit: cover;
     border-radius: 20px;
 }
-.thumbnail .item .content{
+
+.thumbnail .item .content {
     color: #fff;
     position: absolute;
     bottom: 10px;
     left: 10px;
     right: 10px;
 }
-.thumbnail .item .content .title{
+
+.thumbnail .item .content .title {
     font-weight: 500;
 }
-.thumbnail .item .content .description{
+
+.thumbnail .item .content .description {
     font-weight: 300;
 }
+
 /* arrows */
 .arrows{
     position: absolute;
