refactor: nevos botones - linkedin y github

--- a/src/App.css
+++ b/src/App.css
@@ -45,23 +45,36 @@ header a{
     height: 60px;
   }
 
-  /* redes sociales */
-  .social-icons {
-    position: absolute;
+/* redes sociales */
+.social-icons {
+    position: fixed;
     top: 20px;
     right: 20px;
     display: flex;
     align-items: center;
+    flex-direction: column;
     z-index: 101;
   }
   
   .social-icons a {
     color: #eee;
     font-size: 24px;
-    margin-left: 15px;
+    margin-top: 10px;
     text-decoration: none;
+    border-radius: 50%;
+    background-color: transparent;
+    padding: 10px; 
+    width: 25px;
+    height: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: background-color 0.3s ease;
   }
-
+  
+  .social-icons a:hover {
+    background-color: #555; /* Color de fondo al pasar el ratón por encima */
+  }
 
 /* carousel */
 .carousel{
@@ -127,12 +140,14 @@ header a{
     font-family: Poppins;
     font-weight: 500;
     width: 200px;
+    cursor: pointer;
 }
 .carousel .list .item .buttons button:nth-child(2){
     background-color: transparent;
     border: 1px solid #fff;
     color: #eee;
 }
+
 /* thumbail */
 .thumbnail{
     position: absolute;
